--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <a href="oferta.html" class="hero-btn red-btn">Czym się zajmujemy?</a>
             </div>
             <div class="about-col">
-                <img src="images1/helpdislogo.jpg">
+                <img src="helpdislogo.jpg">
             </div>
         </div>
 
